# ATOMOS

./: .gitignore  README-investors.md  README.md  ast-engine.ts  design.md  fix.py  fix_admin_portal.py  fix_admin_portal_all.py  fix_admin_portal_all2.py  fix_admin_portal_all3.py  fix_android.py  fix_android_bad_renames.py  fix_backend_bad_renames.py  fix_driver_statebadge.py  fix_edge_handlers.py  fix_fleetmap.py  fix_import.py  fix_main_rc.py  fix_new_go.py  fix_new_go_2.py  fix_pbxproj.py  fix_pbxproj2.py  fix_pbxproj3.py  fix_publish.py  fix_refund.py  fix_registration_go.py  fix_service_go.py  fix_settings.py  fix_staffview.py  fix_staffview2.py  fix_style.py  fix_swift.py  fix_three.py  fix_two.py  fix_vault.py  fix_vault2.py  fix_vault3.py  fix_vault4.py  fix_vault5.py  package.json  (+26 more)
.agents/design.md-main/: README.md
.agents/design.md-main/docs/: spec.md
.agents/extensions/ast-engine/: README.md  engine.mjs  mcp-server.mjs  package.json
.agents/rules/: copilotmasterinstruction.md  fully_completed_tasks.md
.agents/skills/cache-redis-correctness/: SKILL.md
.agents/skills/concurrency-shield/: SKILL.md
.agents/skills/defensive-typescript/: SKILL.md
.agents/skills/efficient-code/: SKILL.md
.agents/skills/financial-integrity/: SKILL.md
.agents/skills/gap-hunter/: SKILL.md
.agents/skills/kafka-event-contracts/: SKILL.md
.agents/skills/maglev/: SKILL.md
.agents/skills/mobile-developer/: SKILL.md
.agents/skills/native-mobile-safety/: SKILL.md
.agents/skills/spanner-discipline/: SKILL.md
.agents/skills/the-lab-doctrine/: SKILL.md
.agents/skills/websocket-security/: SKILL.md
.gemini/: settings.json
.gemini/skills/design-system/: SKILL.md
.gemini/skills/uiux/: SKILL.md
.github/: ACT.md  copilot-instructions.md  gemini-instructions.md  intrusions.md  mcp.vscode.example.json
.github/skills/click-payment-integration/: SKILL.md
.github/skills/friday-ui-ux/: SKILL.md
.github/skills/global-pay-integration/: SKILL.md
.github/skills/iosui/: SKILL.md
.github/skills/m3/: SKILL.md
.github/skills/nativeandroidandwebui/: SKILL.md
.github/skills/patent-architect/: SKILL.md
.github/skills/payme-business-integration/: SKILL.md
.github/workflows/: ci.yml  deploy-production.yml  deploy.yml  desktop-build.yml  one-eye-guards.yml  sync-set-guard.yml
.zed/: settings.json
.zed/themes/: srds-synthwave-theme.json
pegasus/: .ast-index.json  .coderabbit.yaml  .gitignore  .void-ast-index.json  E2E_TEST_PROTOCOL.md  Makefile  cors.json  design.md  docker-compose.yml  go.work  package-lock.json  package.json  replace_gateways.sh
pegasus/.github/workflows/: ci.yml  (+3 more)
pegasus/apps/admin-portal/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
pegasus/apps/admin-portal/src-tauri/capabilities/: default.json
pegasus/apps/admin-portal/src-tauri/src/: lib.rs  macos_vibrancy.rs  main.rs  tray.rs
pegasus/apps/admin-portal/src-tauri/src/commands/: gateway.rs  security.rs  websocket.rs
pegasus/apps/factory-portal/src-tauri/: Cargo.toml  tauri.conf.json
pegasus/apps/factory-portal/src-tauri/capabilities/: default.json
pegasus/apps/factory-portal/src-tauri/src/: lib.rs  main.rs
pegasus/apps/factory-portal/src-tauri/src/commands/: mod.rs  security.rs
pegasus/apps/retailer-app-desktop/src-tauri/: Cargo.toml  tauri.conf.json
pegasus/apps/retailer-app-desktop/src-tauri/src/: lib.rs
pegasus/apps/retailer-app-desktop/src-tauri/src/commands/: mod.rs  security.rs
pegasus/context/: architecture-graph.json  architecture.md  design-system.md  purpose.md  technology-inventory.json  technology-inventory.md  ui-design.md
pegasus/docs/: BARCODE_SCANNING.md  CLOUD_RUN_TO_GKE_CUTOVER_RUNBOOK.md  IDENTIFIER_HARD_CUTOVER_ROLLBACK_NOTES_2026-04-30.md
pegasus/scripts/: architecture_boundary_guard.py  architecture_guard_mcp.py  contract_drift_guard.py  contract_guard_mcp.py  design_system_guard_mcp.py  design_token_enforcement_guard.py  domino-smoke.sh  guard_utils.py  production_safety_guard.py  security_guard.py  sync_set_guard.py  versionscan.py  visual_test_intelligence_guard.py
the-lab-monorepo/: .coderabbit.yaml  .gitignore  E2E_TEST_PROTOCOL.md  Makefile  docker-compose.yml  fix_syntax.py  go.work.sum  package-lock.json  package.json  playwright.config.ts  replace_gateways.sh
the-lab-monorepo/apps/warehouse-portal/src-tauri/: Cargo.toml  tauri.conf.json
the-lab-monorepo/apps/warehouse-portal/src-tauri/capabilities/: default.json
the-lab-monorepo/apps/warehouse-portal/src-tauri/src/: lib.rs  main.rs
the-lab-monorepo/apps/warehouse-portal/src-tauri/src/commands/: security.rs
the-lab-monorepo/docs/: BARCODE_SCANNING.md  CLOUD_RUN_TO_GKE_CUTOVER_RUNBOOK.md  MAGLEV_READ_ROUTER_ROLLOUT.md
the-lab-monorepo/scripts/: domino-smoke.sh  versionscan.py
void-theme/: package.json
void-theme/icons/: icon-theme.json
void-theme/themes/: theme.json
(+2096 files in other folders)
